--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,4 +1,4 @@
-<div>
+<div class="bg-secondary">
     <app-logo></app-logo>
     {{ nome }} {{cognome}} {{anno}}
     <h2>Il mio animale si chiama <strong>{{animale.nome}}</strong> ed è un {{animale.razza}}</h2>
