--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,12 +1,17 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 
 <div class="container">
-    <h1>Ciao!</h1>
+    <app-title testo="Prodotti"></app-title>
     <h3>Novità</h3>
     <app-lista-prodotti></app-lista-prodotti>
     <hr>
     <h3>Suggerimenti</h3>
     <app-lista-prodotti></app-lista-prodotti>
+
+    <app-title testo="Blog"></app-title>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, placeat libero, eos eum alias neque ad hic consectetur iure inventore, quisquam eveniet autem sit sapiente adipisci aut dolorem! Illum, officiis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum ipsa molestias maiores nobis quae praesentium eos iste blanditiis non pariatur minima illo corporis iure numquam deserunt officia consectetur, sunt rem?
+    Distinctio harum voluptatum molestias architecto neque id temporibus aut eveniet fuga maiores, eaque eius consectetur nihil assumenda quos unde qui tempore veniam suscipit pariatur? Tenetur quo magnam quasi excepturi fugiat?
+    Fugiat suscipit amet aliquam delectus et laborum, rem magnam accusamus tempore quod, minima, iusto ducimus eos consectetur repellat vel fugit. Architecto, aliquam? Ab corrupti explicabo repudiandae obcaecati pariatur tempora architecto?</p>
 </div>
 
 
