--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,8 +2,10 @@
 
 <div class="container">
     <app-title testo="Prodotti"></app-title>
+    <app-title [testo]="testo_titolo_prodotti"></app-title>
     <h3>Novità</h3>
-    <app-lista-prodotti></app-lista-prodotti>
+    <app-lista-prodotti [prodotti]="prodotti_novita"></app-lista-prodotti>
+    <!-- passo l’array 'prodotti' del genitore al figlio -->
     <hr>
     <h3>Suggerimenti</h3>
     <app-lista-prodotti></app-lista-prodotti>
