--- a/src/app/components/prodotto-card/prodotto-card.html
+++ b/src/app/components/prodotto-card/prodotto-card.html
@@ -1,7 +1,7 @@
 <div class="card" style="width: 18rem;">
     <div class="card-body">
-        <h5 class="card-title">Bici Rossa</h5>
-        <h6 class="card-subtitle mb-2 text-body-secondary">€ 120,99</h6>
-        <p class="card-text">Bici da corsa</p>
+        <h5 class="card-title">{{ prodotto?.nome }}</h5>
+        <h6 class="card-subtitle mb-2 text-body-secondary">{{ prodotto?.prezzo}}</h6>
+        <p class="card-text">{{ prodotto?.desc }}</p>
     </div>
 </div>
