--- a/src/app/components/prodotto-card/prodotto-card.html
+++ b/src/app/components/prodotto-card/prodotto-card.html
@@ -1,4 +1,5 @@
 <div class="card" style="width: 18rem;">
+    <img [src]="prodotto?.foto" alt="" class="card-iomg-top">
     <div class="card-body">
         <h5 class="card-title">{{ prodotto?.nome }}</h5>
         <h6 class="card-subtitle mb-2 text-body-secondary">{{ prodotto?.prezzo}}</h6>
