--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,16 @@
 
 @import "bootstrap/dist/css/bootstrap.min.css";
 
-h1{
+h1 {
     color: red;
+}
+
+.verde {
+    background-color: darkgreen;
+    color: wheat;
+}
+
+.rosso {
+    background-color: brown;
+    color: burlywood;
 }
