--- a/src/app/components/lista-prodotti/lista-prodotti.html
+++ b/src/app/components/lista-prodotti/lista-prodotti.html
@@ -1,9 +1,11 @@
 <h3>{{ titolo }}</h3>
 <div class="d-flex flex-wrap justify-center gap-2">
     @for ( p of prodotti; track p.nome){
-    <app-prodotto-card [prodotto]="p"></app-prodotto-card>
+    <app-prodotto-card [prodotto]="p" (prodottoSelezionato)="selezionaProdotto($event)"></app-prodotto-card>
     <!-- *ngFor="let [singolo oggetto array] of [array]" funziona come cliclo for of, ciclando su ogni singolo oggetto array-->
     <!-- track dice ad Angular di riconoscere ogni prodotto tramite il nome -->
+    <!-- Riceve l'evento "prodottoSelezionato" dal figlio e richiama il metodo selezionaProdotto nel genitore, passando come argomento il prodotto ($event) -->
+    <!-- $event è una variabile speciale che contiene il dato passato dall’evento (cioè l’oggetto Prodotto emesso con emit()) -->
     }
 </div>
 <hr>
