--- a/src/app/components/prodotto-card/prodotto-card.html
+++ b/src/app/components/prodotto-card/prodotto-card.html
@@ -26,6 +26,10 @@
                 - dentro "saluta()" puoi scrivere qualsiasi logica (es. mostrare un alert, stampare in console, modificare variabili ecc.)
             In pratica questo collega il template HTML alla logica TypeScript del componente 
         -->
+
+        <button class="btn btn-warning" style="margin-left:10px;" (click)="scatenaEvento()">Seleziona Prodotto</button>
+        <!-- Al click di questo bottone attivo la funzione "scatenaEvento()" -->
+
     </div>
 </div>
 <!-- Se non c'è prodotto mostra messaggio alternativo -->
